--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -116,13 +116,14 @@
   /* or 10px */
 
   letter-spacing: 0.02em;
-
+  cursor: pointer;
   color: #ffffff;
   background: #b5b5b5;
   box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.46);
   border-radius: 3px;
   border: none;
 }
+
 .terms {
   width: 299px;
   height: 6px;
